# Option-Pricing-via-Levy-Models-in-R

./: .Rhistory  .gitignore  DEPLOYMENT_CHECKLIST.md  Feng.Rproj.RData  LICENSE  README.md  academic-paper.html  academic-paper.md  algo1_NIG_v11.r  full.R  index.html  index.md  levy-processes-paper.html  loss2_NIG_FFT_writeup - R Conference.docx  loss2_NIG_FFT_writeup.docx  more timing.r  myst.yml  options-pricing-presentation.html  presentation-slides.html  presentation-slides.md
.binder/: .zshrc  Dockerfile  apt.txt  build_myst_local.sh  package.json  package.json:Zone.Identifier  postBuild  pyproject.toml  requirements.txt
.github/workflows/: deploy-gh-pages.yml  deploy-pages.yml
Feng Project - FINAL/Feng Project - FINAL/: algo1_NIG_v11.r
OLD-src/Algo1 NIG - old/: SO CLOSE.r
OLD-src/Algo2 FFT - old/: fft-joey.R
VCS/: hilbert.py  rnig.xlsx
VCS/Algo1 NIG VCS/: algo1.r  algorithm1-v11.r  algorithm1-v3-output(2).r  algorithm1-v3-output.r  close.R
VCS/Algo2 FFT VCS/: fft-joey-v3.R  fft-rainv2.R  fft-v2.R
VCS/C++/: Kou DoubleDiff Process.cpp  MC Model in C.cpp  Source.cpp  alg.cpp  main.cpp  mainex.cpp  rng.cpp  rnig.cpp  statistics.cpp  test.cpp
_static/: custom.css
doc/: LossJoseph_RFinance_Presentation.pptx  RFinance Presentation.pptx
doc/PDF Resources/: desktop.ini
documentation/: README.md
documentation/misc/: Comparing_Computational_Efficiency.xlsx  LossJoseph_RFinance_Presentation.pptx
old-src-code/Algo1 NIG - old/: algorithm1-v10.r  algorithm1-v2.r  algorithm1-v4-output.r  desktop.ini
option-pricing-myst-site/: .gitignore
option-pricing-myst-site/.github/workflows/: deploy-myst.yml
source/: algo1_NIG_final.r  algo2_InverseTransform_final.R
src/: algo1_NIG_PC_Parity.r  algo1_NIG_final.r  algo2_FFT_v5_Binary_Search.R  algo2_InverseTransform_final.R
src-MASTER/: algo1_NIG_final.r  algo1_NIG_final_dl.html  algo1_NIG_final_dl.r  algo2_FFT_PC_Parity.R  algo2_FFT_v4.R  algo2_FFT_v5_Binary_Search.R
src-MASTER/Option-Pricing-via-Levy-Models/old/: algo2_FFT_v4.R
src-MASTER/Option-Pricing-via-Levy-Models/src/: algo1_NIG_PC_Parity.r  algo1_NIG_v11.r
src-old/Algo1 NIG - old/: yuchen-algo1_from_scratch.r
src-old/Algo2 FFT - old/: fft.rain-v1.R
src-old/mstr/: algo1_NIG_v11.r  algo2_FFT_v4.R
src/-deprecated/: algo1_NIG_v11.r  algo1_put_call_parity.r
src/-deprecated/timing/: IT with time.R  NIG simulation times.R  NIG with time.R  full.R
work-in-progress/: README - PDF to LaTeX.md
